--- a/src/Css/Shared/SubCategoryCard.css
+++ b/src/Css/Shared/SubCategoryCard.css
@@ -26,7 +26,7 @@
     font-size: 1.5rem;
     color: #202E3C;
     display: flex;
-    
+    white-space: nowrap;
     justify-content: center;
     align-items: center;
     border-radius: 8px;
