--- a/src/Css/AdminComponents/adminCSS.css
+++ b/src/Css/AdminComponents/adminCSS.css
@@ -9,12 +9,19 @@
 }
 .CategoryUpload{
     height: 90vh;
-    width: 100vw;
+    /* width: 100vw; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.CategoryUpload .form{
+.SubCategoryUpload{
+    height: 90vh;
+    /* width: 100vw; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,7 +32,7 @@
     background-color: #202e3c;
     gap: 30px;
 }
-.CategoryUpload .form .wrapper{
+.form .wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
