--- a/src/Css/UserComponents/Shared/BestSellingPicks.css
+++ b/src/Css/UserComponents/Shared/BestSellingPicks.css
@@ -10,7 +10,7 @@
     /* margin: 2%; */
     width: 100%;
     height: 100%;
-    background-image: url('../../../Assets/BestSellingPicks/BSPbackdrop.png');
+    /* background-image: url('../../../Assets/BestSellingPicks/BSPbackdrop.png'); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
