--- a/src/Css/UserComponents/Shared/WhoWeAre.css
+++ b/src/Css/UserComponents/Shared/WhoWeAre.css
@@ -1,5 +1,5 @@
 .WhoWeAre {
-    background-image: url('../../../Assets/WWA/WWABG.png');
+    /* background-image: url('../../../Assets/WWA/WWABG.png'); */
     /* background: #f5f5f5; */
     padding: 10px 20px;
     text-align: center;
