--- a/src/Css/AdminComponents/adminCSS.css
+++ b/src/Css/AdminComponents/adminCSS.css
@@ -7,6 +7,9 @@
     width: 100vw;
     font-size: 10px;
 }
+.Adminheader label{
+    cursor: pointer;
+}
 .CategoryUpload{
     height: 90vh;
     /* width: 100vw; */
@@ -51,6 +54,7 @@
     cursor: pointer;
 }
 .CategoryList{
+    margin: 0;
     display: flex;
     height: 100vh;
     width: 100vw;
@@ -98,4 +102,22 @@ color: white;
 border: none;
 cursor: pointer;
 background-color: transparent;
+}
+.list{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    /* align-items: center; */
+    gap: 20px;
+    padding: 20px;
+}
+.listBox{
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    background-color: #202e3c;
+    align-items: center;
+    color: wheat;
 }
