--- a/src/Css/UserComponents/Shared/Header.css
+++ b/src/Css/UserComponents/Shared/Header.css
@@ -83,3 +83,59 @@
   height: 35px;
   cursor: pointer;
 }
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* dark background */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9; /* above everything */
+  transition: opacity 0.8s ease;
+}
+.modalContent{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.logInForm{
+  /* justify-content: center; */
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(/src/Assets/bgImage.png);
+  object-fit: contain;
+  height: 60%;
+  width: 30%;
+  /* top: 0; */
+  opacity: 1;
+  z-index: 999;
+}
+.logInForm label{
+  color: #202e3c;
+}
+ .btn{
+  position: absolute;
+  top: inherit;
+  right: 3%;
+  background-color: transparent;
+
+}
+.logInForm .image{
+  width: 40%;
+  height: auto;
+  margin: 0;
+}
+.modalOverlay .show {
+  opacity: 1;
+  pointer-events: auto;
+}
+.logInForm .show{
+  transform: translateY(0);
+  opacity: 1;
+}
