--- a/src/Css/UserComponents/Shared/HeroSec.css
+++ b/src/Css/UserComponents/Shared/HeroSec.css
@@ -105,11 +105,13 @@ label{
 }
 
 .sliderTrackWrapper {
+  height: inherit;
   width: 780px; /* 260 * 3 items */
   overflow: hidden;
 }
 
 .sliderTrack {
+  height: inherit;
   display: flex;
   transition: transform 0.5s ease-in-out;
   width: 100%;
@@ -155,12 +157,13 @@ label{
   margin-top: 10px;
 }
 
-.vector {
+.slider .vector {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   z-index: 2;
   cursor: pointer;
+  transition: opacity 0.6s ease;
 }
 
 .vector.left {
@@ -170,8 +173,21 @@ label{
 .vector.right {
   right: 2%;
 }
+.blocked{
+  opacity: 0.3;
+}
+.bottom{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  margin-top: -180px;
+}
 
-.slider button {
+.bottom button {
   font-family: 'Oswald-Medium', Helvetica;
   border-radius: 8px;
   font-size: 24px;
