--- a/src/Css/UserComponents/Shared/Header.css
+++ b/src/Css/UserComponents/Shared/Header.css
@@ -13,6 +13,7 @@
   justify-content: center;
   margin: 0;
   padding: 0;
+  background-size: cover;
   background-image: url('../../../Assets/Header/HeaderTexture.png');
 }
 .header .grid-item{
