--- a/src/Css/UserComponents/Shared/HeroSec.css
+++ b/src/Css/UserComponents/Shared/HeroSec.css
@@ -194,3 +194,116 @@ label{
   padding: 2px 30px;
   margin-top: 10px;
 }
+
+@media (max-width: 768px) {
+  .container {
+    height: 100vh !important; 
+    /* min-height: 920px;Take up 50% of screen height */
+    max-height: none;
+    padding: 1rem 0;
+    background-position: top;
+    background-size: cover;
+  }
+
+  .content {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0 1rem;
+    gap: 1.1rem;
+    height: 100%;
+  }
+
+  .DSW img {
+    min-width: 100%;
+    min-height: 10vh;
+  }
+
+  .label img {
+    /* margin-top: 10px; */
+    min-width: 90%;
+    max-height: 6vh;
+  }
+  .label{
+    gap: 1; 
+  }
+
+  label {
+    font-size: 2.5rem;
+    line-height: 1.4;
+    max-width: 90%;
+    text-align: center;
+    padding: 0 10px;
+  }
+
+  .slider {
+    height: 40vh;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .sliderTrackWrapper {
+    height: inherit;
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  .sliderTrack {
+    height: inherit;
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: max-content;
+    transform: translateX(0) !important;
+    justify-content: flex-start;
+  }
+
+  .sliderElement {
+  width: 100vw;
+  height: 100%;
+  margin: 0 2vw;
+  transform: scale(1);
+  transition: transform 0.3s ease-in-out;
+  }
+
+  .sliderElement img {
+    height: 100%;
+    width: auto;
+    object-fit: contain;
+  }
+
+  .sliderElement.selected {
+    transform: scale(1.5);
+  }
+
+  .vector {
+    width: 10vw;
+    height: 10vh !important;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .vector img{
+    height: 100%;
+  }
+  .vector.left {
+    left: 6px;
+  }
+
+  .vector.right {
+    right: 6px;
+  }
+
+  .bottom {
+    margin-top: 0.5rem;
+    padding-bottom: 1rem;
+  }
+
+  .sliderText {
+    font-size: 4rem;
+  }
+
+  .bottom button {
+    font-size: 4rem;
+    padding: 6px 20px;
+  }
+}
