--- a/src/Css/UserComponents/Shared/WhoWeAre.css
+++ b/src/Css/UserComponents/Shared/WhoWeAre.css
@@ -4,6 +4,8 @@
     padding: 10px 20px;
     text-align: center;
     font-family: 'Oswald', sans-serif;
+    position: relative;
+    /* z-index: 900; */
   }
   
   .WWAheading {
