--- a/src/Css/UserComponents/Shared/FeaturedCategory.css
+++ b/src/Css/UserComponents/Shared/FeaturedCategory.css
@@ -7,7 +7,6 @@
 
 
 .FeaturedCat{
-    position: default;
     margin-left: 2%;
     margin-bottom: 2%;
 }
@@ -19,10 +18,12 @@
     color: #c39970; /* this is a tan/golden brown – tweak as needed */
     letter-spacing: 1px; /* slight spacing for sharpness */
     margin-bottom: 1rem;
+    margin-left: 0;
 }
 
 .box{
-   
+    position: relative;
+    z-index: 900;
     padding: 10px;
     background-size: contain;
     background-repeat: no-repeat;
@@ -45,6 +46,7 @@
 .box::after {
     content: "";
     position: absolute;
+    z-index: 901;
     bottom: 0;
     left: 0;
     height: 40%;
@@ -61,6 +63,8 @@
 }
 .CatTitle{
     font-family: 'Oswald-Medium', Helvetica;
+    position: relative;
+    z-index: 900;
     font-size: 2.9rem;/* adjust size as needed */
     font-weight: 300; 
     color: #c39970; /* this is a tan/golden brown – tweak as needed */
