--- a/src/Css/UserComponents/Shared/HeroSec.css
+++ b/src/Css/UserComponents/Shared/HeroSec.css
@@ -245,16 +245,20 @@ label{
 
   .sliderTrackWrapper {
     height: inherit;
-    width: 100%;
-    overflow-x: hidden;
+    width: 100vw;
+    position: relative;
+    overflow: hidden;
   }
 
   .sliderTrack {
     height: inherit;
     display: flex;
     transition: transform 0.5s ease-in-out;
-    width: max-content;
-    transform: translateX(0) !important;
+    width: fit-content;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    /* transform: translateX(0) !important; */
     justify-content: flex-start;
   }
 
@@ -262,6 +266,7 @@ label{
   width: 100vw;
   height: 100%;
   margin: 0 2vw;
+  flex-shrink: 0;
   transform: scale(1);
   transition: transform 0.3s ease-in-out;
   }
