--- a/src/Css/UserComponents/featured/App.css
+++ b/src/Css/UserComponents/featured/App.css
@@ -9,6 +9,7 @@
     background-color: #f5f5f5;
     color: #222;
     overflow-x: hidden;
+    box-shadow: none !important;
   }
   .scrollable-specs {
   max-height: 120px;  
