--- a/src/Css/UserComponents/Shared/BestSellingPicks.css
+++ b/src/Css/UserComponents/Shared/BestSellingPicks.css
@@ -7,15 +7,12 @@
     
     
 .bestSellingPicks{
-    /* margin: 2%; */
+    /* overflow: hidden; */
+    max-width: 100%;
+    margin: 2%;
     width: 100%;
     height: 100%;
-    /* background-image: url('../../../Assets/BestSellingPicks/BSPbackdrop.png'); */
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-    z-index: 901;
+
 }
 
 .BSPHeading{
@@ -24,5 +21,33 @@
     color: #c39970;
     font-size: 3rem;
     font-weight: 300;
+}
+
+@media (max-width: 768px) {
+  .bestSellingPicks {
+    padding: 0;
+    margin: 1%;
+  }
+
+  .BSPHeading {
+    font-size: 3.5rem;
+    /* text-align: center; */
+    margin: 0;
+    /* padding: 0; */
+    margin-bottom: 1rem;
+  }
+
+  .allProducts {
+    display: flex;
+    max-width: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    gap: 1.5rem;
+  }
+
+  .ProductCard {
+    height: auto;
+    box-sizing: border-box;
+  }
 }
 
