--- a/src/Css/UserComponents/featured/App.css
+++ b/src/Css/UserComponents/featured/App.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+     outline: 1px dashed red;
   }
   
   body {
@@ -9,6 +10,7 @@
     background-color: #f5f5f5;
     color: #222;
     overflow-x: hidden;
+    width: 100vw;
     box-shadow: none !important;
   }
   .scrollable-specs {
