--- a/src/Css/UserComponents/Shared/BestSellingPicks.css
+++ b/src/Css/UserComponents/Shared/BestSellingPicks.css
@@ -7,7 +7,6 @@
     
     
 .bestSellingPicks{
-    /* overflow: hidden; */
     max-width: 100%;
     margin: 2%;
     width: 100%;
@@ -21,6 +20,12 @@
     color: #c39970;
     font-size: 3rem;
     font-weight: 300;
+}
+.allProducts{
+    margin-bottom: 3%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1px;
 }
 
 @media (max-width: 768px) {
@@ -37,17 +42,13 @@
     margin-bottom: 1rem;
   }
 
-  .allProducts {
+  /* .BSPallProducts {
     display: flex;
     max-width: 100%;
     overflow-x: hidden;
     scroll-behavior: smooth;
     gap: 1.5rem;
-  }
+  } */
 
-  .ProductCard {
-    height: auto;
-    box-sizing: border-box;
-  }
 }
 
