--- a/src/Css/UserComponents/Shared/SubCategoryCard.css
+++ b/src/Css/UserComponents/Shared/SubCategoryCard.css
@@ -2,7 +2,7 @@
     padding: 10px;
     height: 462px;
     width: 314px;
-    background-image: cover;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
