--- a/src/Css/UserComponents/Shared/WhoWeAre.css
+++ b/src/Css/UserComponents/Shared/WhoWeAre.css
@@ -73,10 +73,16 @@
   }
 
   .cardHead {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   .cardDescription {
+    font-size: 1.5rem;
+  }
+  .WWAimg img{
+    height: 20%;
+  }
+  .WWAheading {
     font-size: 2rem;
   }
 }
