--- a/src/Css/UserComponents/featured/AllProductList.css
+++ b/src/Css/UserComponents/featured/AllProductList.css
@@ -3,7 +3,7 @@
     margin-top: 3%;
 }
 .AllProductList .title{
-    display: block;
+    width: fit-content;
     font-family: 'Oswald-Light', Helvetica;
     font-size: 1.5rem;
     margin-left: 5%;
@@ -11,11 +11,20 @@
 .AllProductList .heroimg{
     margin: 5%;
     margin-top: 5px;
+    /* object-fit: cover; */
+    overflow: hidden;
+    width: 90%;
+}
+.AllProductList .heroimg img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 .AllProductList .center{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 .AllProductList .subcategoryList{
     margin-top: 2%;
@@ -35,4 +44,65 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1px;
     
+}
+
+@media (max-width : 768px) {
+    .AllProductList .heroimg{
+        margin: 0;
+        margin-top: 5px;
+        width: 100%;
+    }
+    .AllProductList .center{
+        width: 100%;
+        overflow: hidden;
+    }
+    .AllProductList .center .subcategoryList{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto;
+        gap: 2%;
+        width:100%
+    }
+     .AllProductList .subcategoryList > :nth-child(1) {
+    grid-column: 1 / 2;
+    grid-row: 1;
+    }
+
+    .AllProductList .subcategoryList > :nth-child(2) {
+        grid-column: 2 / 2;
+        grid-row: 1;
+    }
+
+    .AllProductList .subcategoryList > :nth-child(3) {
+        grid-column: 1 / 2;
+        grid-row: 2;
+        margin-left: 50%;
+    }
+     .AllProductList .subcategoryList > :nth-child(1),
+     .AllProductList .subcategoryList > :nth-child(3),
+  .AllProductList .subcategoryList > :nth-child(2) {
+    width: 100%; /* increase card width */
+  }
+
+    /* For 3rd card (optional: center it a bit more visually) */
+    /* .AllProductList .subcategoryList > :nth-child(3) {
+        justify-self: center;
+    } */
+
+    .subcategoryList .SubCategoryCard{
+        width: 100%;
+    }
+      .SubCategoryCard .title {
+        font-size: 1.8rem;
+        text-align: left;
+    }
+
+    .SubCategoryCard button {
+        font-size: 1rem;
+        height: 30px;
+        width: 90px;
+    }
+    .allProducts{ 
+        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-rows: auto auto;
+    }
 }
