--- a/src/Css/UserComponents/featured/App.css
+++ b/src/Css/UserComponents/featured/App.css
@@ -10,7 +10,7 @@
     background-color: #f5f5f5;
     color: #222;
     overflow-x: hidden;
-    width: 100vw;
+    width: 100%;
     box-shadow: none !important;
   }
   .scrollable-specs {
