--- a/src/Css/UserComponents/featured/Category.css
+++ b/src/Css/UserComponents/featured/Category.css
@@ -1,4 +1,16 @@
-.Category{
+.category{
     margin: 0;
     padding: 0;
+    /* display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center; */
+}
+@media (max-width : 768px) {
+    .category{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 }
