--- a/src/Css/UserComponents/featured/ProductPage.css
+++ b/src/Css/UserComponents/featured/ProductPage.css
@@ -21,6 +21,11 @@
     height:100px;
     width: 100px;
 }
+.imageList .image img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
 .imageList  .clicked{
     border: 5px solid #C39970;
 }
@@ -39,7 +44,7 @@
 }
 .heroDetails .title{
     font-family: 'Oswald-Medium', Helvetica;
-    font-size: 3.43rem;
+    font-size: 2.7rem;
     color: #202E3C;
     margin: 10px;
     max-width: 499px;
