--- a/src/Css/UserComponents/Shared/HeroSec.css
+++ b/src/Css/UserComponents/Shared/HeroSec.css
@@ -18,22 +18,23 @@ main{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
-    max-height: 569px;
+    overflow: hidden;
+    height: 70%;
+    max-height: 600px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .content{
     margin: 0;
     padding: 0;
-    height: 100%;
     width: 100%;
     display: grid;
     grid-template-rows: auto auto 2fr ;
-    gap: 1rem;
+    /* gap: 1rem; */
     align-items: center;
     justify-content: center;
     
@@ -69,14 +70,14 @@ main{
     justify-content: center;
     object-fit: contain;
     height: auto;
-    max-height: 92px;
+    /* max-height: 92px; */
     width: auto;
     /* max-width: 1014px; */
 
 }
 
 .label img{
-    max-width: 830px !important;
+    max-width: 830px;
     max-height: 55px;
     object-fit: contain;
 }
@@ -177,14 +178,13 @@ label{
   opacity: 0.3;
 }
 .bottom{
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0;
+  margin-top: -80px;
+  margin-bottom: 50px;
   padding: 0;
-  margin-top: -180px;
 }
 
 .bottom button {
@@ -201,17 +201,27 @@ label{
     /* min-height: 920px;Take up 50% of screen height */
     max-height: none;
     padding: 1rem 0;
+    width: 100%;
     background-position: top;
     background-size: cover;
   }
 
   .content {
+    width: inherit;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     padding: 0 1rem;
     gap: 1.1rem;
     height: 100%;
+  }
+  .DSW{
+    width: 100%;
+    max-width: 358px;
+    /* max-width: 100%; */
+    object-fit: contain;
+    box-sizing: border-box;
+    margin: 0;
   }
 
   .DSW img {
@@ -221,15 +231,17 @@ label{
 
   .label img {
     /* margin-top: 10px; */
-    min-width: 90%;
+    /* min-width: 90%; */
     max-height: 6vh;
+    max-width: 358px;
   }
   .label{
+    max-width: 358px;
     gap: 1; 
   }
 
-  label {
-    font-size: 2.5rem;
+  .label label {
+    font-size: 1.5rem;
     line-height: 1.4;
     max-width: 90%;
     text-align: center;
@@ -237,7 +249,7 @@ label{
   }
 
   .slider {
-    height: 40vh;
+    height: auto;
     position: relative;
     width: 100%;
     overflow: hidden;
@@ -245,8 +257,9 @@ label{
 
   .sliderTrackWrapper {
     height: inherit;
-    width: 100vw;
-    position: relative;
+    width: 280px;
+    margin: 0 auto;
+    /* position: relative; */
     overflow: hidden;
   }
 
@@ -255,7 +268,7 @@ label{
     display: flex;
     transition: transform 0.5s ease-in-out;
     width: fit-content;
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 0;
     margin: 0;
     /* transform: translateX(0) !important; */
@@ -263,9 +276,9 @@ label{
   }
 
   .sliderElement {
-  width: 100vw;
+  width: 100%;
   height: 100%;
-  margin: 0 2vw;
+  margin: 0;
   flex-shrink: 0;
   transform: scale(1);
   transition: transform 0.3s ease-in-out;
@@ -278,7 +291,7 @@ label{
   }
 
   .sliderElement.selected {
-    transform: scale(1.5);
+    transform: scale(1);
   }
 
   .vector {
@@ -299,16 +312,17 @@ label{
   }
 
   .bottom {
-    margin-top: 0.5rem;
-    padding-bottom: 1rem;
+    margin-top: 0;
+    /* gap: 1px ; */
+    /* padding-bottom: 1rem; */
   }
 
   .sliderText {
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   .bottom button {
-    font-size: 4rem;
-    padding: 6px 20px;
+    font-size: 2.5rem;
+    padding: 4px 20px;
   }
 }
