--- a/src/Css/UserComponents/featured/AllProductList.css
+++ b/src/Css/UserComponents/featured/AllProductList.css
@@ -72,16 +72,17 @@
         grid-row: 1;
     }
 
+    .AllProductList .subcategoryList > :nth-child(1),
+    .AllProductList .subcategoryList > :nth-child(3),
+ .AllProductList .subcategoryList > :nth-child(2) {
+   width: 90%; /* increase card width */
+   margin: 0 auto;
+ }
     .AllProductList .subcategoryList > :nth-child(3) {
         grid-column: 1 / 2;
         grid-row: 2;
         margin-left: 50%;
     }
-     .AllProductList .subcategoryList > :nth-child(1),
-     .AllProductList .subcategoryList > :nth-child(3),
-  .AllProductList .subcategoryList > :nth-child(2) {
-    width: 100%; /* increase card width */
-  }
 
     /* For 3rd card (optional: center it a bit more visually) */
     /* .AllProductList .subcategoryList > :nth-child(3) {
